--- a/index.html
+++ b/index.html
@@ -15,21 +15,23 @@
         <h2 class="font_size_150"><b>Boolando</b></h2>
         <p class="font_size_150"><b>Spedizione e reso gratuiti!</b></p>
         <!--contenitore schede modelli-->
-        <div>
-            <div>
+        <div class="padding">
+            <div class="border" class="flex_basis">
                 <!-- immagine-->
                 <div>
                     <img src="./img/1.webp" alt="primo modello">
 
                 </div>
                 <!--descrizione-->
-                <div>
+                <div class="flex_start">
                     <p>Levi's</p>
                     <p><b>RELAXED FIT TEE UNISEX</b></p>
-                    <p>14,99 &euro; <span class="strike_text">29,99 &euro;</span></p>
+                    <p><span class="text_red"><b>14,99 &euro;</b></span> <span class="strike_text">29,99 &euro;</span>
+                    </p>
 
                 </div>
             </div>
+            
 
 
         </div>
